fix z-index on dialog and dialog backdrop

--- a/src/components/Dialog/Dialog.module.scss
+++ b/src/components/Dialog/Dialog.module.scss
@@ -1,7 +1,11 @@
+/**
+ * {1} Higher than topic map items' z-indeces
+ */
 .overlay {
   background-color: rgba(0, 0, 0, 0.3);
   inset: 0;
   position: fixed;
+  z-index: 2; /* {1} */
 
   @media (prefers-reduced-motion: no-preference) {
     animation: show-overlay 150ms cubic-bezier(0.16, 1, 0.3, 1);
@@ -18,6 +22,9 @@
   top: 0.625rem;
 }
 
+/**
+ * {1} Higher than .overlay's z-index
+ */
 .content {
   background-color: white;
   border-radius: 0.375rem;
@@ -32,6 +39,7 @@
   top: 50%;
   transform: translate(-50%, -50%);
   width: 90vw;
+  z-index: 3; /* {1} */
 
   @media (prefers-reduced-motion: no-preference) {
     animation: show-dialog 150ms cubic-bezier(0.16, 1, 0.3, 1);
